# trm

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: compile_shaders.bat  compile_shaders.sh  compute.comp  compute.spv  vertex.spv  vertex.vert
src/: main.c  trm_containers.c  trm_containers.h  trm_maths.c  trm_maths.h  trm_memory.c  trm_memory.h  trm_renderer.c  trm_renderer.h
